# dades-dag-sandbox

./: .gitignore  Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt
dags/: sandbox_dag.py  sandbox_fal_dag.py
dbt_dades_sandbox/: dbt_project.yml
dbt_dades_sandbox/config/: profiles.yml
dbt_dades_sandbox/fal_models/: average.py
dbt_dades_sandbox/models/fal/: average.sql
dbt_dades_sandbox/models/fal_experiment/: post_fal_model.sql  schema.yml
docs/: 2022-12-27-how to run fal.md
